# pyprojectr

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  MANIFEST.in  README.md  pyproject.toml
.github/: pyprojectr.yaml
.github/workflows/: pyprojectr.yaml  release.yaml
src/pyprojectr/: __init__.py  core.py  models.py  pyproject.py
src/pyprojectr/models/: core.py  pyproject.py
src/pyprojectr/tools/: __init__.py  pytest.py  setuptools_scm.py
tests/: conftest.py  test_pyproject_build_system.py  test_pyproject_from_file.py
tests/unit/: test_pyproject_build_system.py  test_pyproject_model.py  test_pyproject_readme.py
tests/unit/models/: test_pyproject_authors.py  test_pyproject_build_system.py
