[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=80", "setuptools-scm[toml]" ]

[project]
name = "pyprojectr"
description = "Add your description here"
readme = "README.md"
license = { text = "Apache2" }
authors = [ { name = "Rowland Ogwara", email = "r.ogwara@gmail.com" } ]
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "attrs>=26.1",
  "cattrs>=26.1",
  "tomli>=2.4.1",
]

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-cov>=7.1",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.pyproject-fmt]
table_format = "long"
collapse_tables = [ "project.authors" ]

[tool.pytest]
minverson = "9.0"
